[tool.poetry]
name = "asyncio_redis"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
hiredis = {version = "^1.0",optional = true}

[tool.poetry.dev-dependencies]
flake8 = "^3.8"
mypy = "^0.782.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
isort = "^4.3"

[tool.poetry.extras]
hiredis = ["hiredis"]

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
